# lkPlayer

./: build.gradle  settings.gradle
LkPlayerlibrary/: build.gradle
LkPlayerlibrary/src/androidTest/java/com/lkxiaojian/lkplayerlibrary/: ExampleInstrumentedTest.kt
LkPlayerlibrary/src/main/: AndroidManifest.xml
LkPlayerlibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LkPlayerlibrary/src/main/cpp/include/myinclude/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  LkFfmpage.cpp  LkFfmpage.h  Macro.h  SafeQueue2.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
LkPlayerlibrary/src/main/java/com/lkxiaojian/lkplayerlibrary/: ErrorCode.kt  LkPlayer.kt
LkPlayerlibrary/src/main/res/layout/: controller_layout.xml
LkPlayerlibrary/src/test/java/com/lkxiaojian/lkplayerlibrary/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/xiaojian/lkplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/xiaojian/lkplayer/: FileListActivity.kt  LkPlayer.kt  MainActivity.kt  MyAp.kt  VideoAdapter.kt  VideoInfo.kt  VideoPlayActivity.kt
app/src/main/res/drawable/: shpae_back.xml
app/src/main/res/layout/: activity_file_list.xml  activity_main.xml  activity_video_play.xml  video_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xiaojian/lkplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
